during incr. reflow table cells have a unconstrained computed size, they need to ensure that a second constrained reflow is issued on the children, bug 237366, initial idea by saito@densan.co.jp r/sr=dbaron